src/test/ui/issue-17718-constants-not-static.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-17718-constants-not-static.rs:15:31
   |
LL | fn foo() -> &'static usize { &id(FOO) }
   |                               ^^^^^^^ - temporary value only lives until here
   |                               |
   |                               temporary value does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
